--- a/Models/Instruments/airspeed/airspeed.ac
+++ b/Models/Instruments/airspeed/airspeed.ac
@@ -7,9 +7,9 @@ MATERIAL "transparent.001" rgb 0.547091 0.565624 0.595981 amb 0 0 0 emis 0 0 0 s
 OBJECT world
 kids 9
 OBJECT poly
-name "Face.001"
-data 8
-Mesh.010
+name "Face"
+data 4
+Face
 texture "colors.rgb"
 texrep 1 1
 crease 30.000000
