--- a/Models/Panels/Instruments/clock/clock.ac
+++ b/Models/Panels/Instruments/clock/clock.ac
@@ -1,18 +1,18 @@
 AC3Db
 MATERIAL "DefaultWhite" rgb 1 1 1  amb 1 1 1  emis 0 0 0  spec 0.5 0.5 0.5  shi 64  trans 0
 MATERIAL "ac3dmat1" rgb 1 1 1 amb 0.2 0.2 0.2 emis 0 0 0 spec 0.5 0.5 0.5 shi 10 trans 0
-MATERIAL "Noneai_face.rgb" rgb 0.8 0.8 0.8 amb 0.5 0.5 0.5 emis 0 0 0 spec 1 1 1 shi 32 trans 0
+MATERIAL "Noneai_face.png" rgb 0.8 0.8 0.8 amb 0.5 0.5 0.5 emis 0 0 0 spec 1 1 1 shi 32 trans 0
 MATERIAL "illum" rgb 0.945 0.941 0.922 amb 0 0 0 emis 0.601333 0.601333 0.601333 spec 0 0 0 shi 72 trans 0
 MATERIAL "illum2" rgb 1 0 0 amb 0 0 0 emis 0.601333 0.601333 0.601333 spec 0 0 0 shi 72 trans 0
-MATERIAL "Nonevisse.rgb" rgb 0.8 0.8 0.8 amb 0.5 0.5 0.5 emis 0 0 0 spec 1 1 1 shi 32 trans 0
-MATERIAL "transparent.001" rgb 0.547091 0.565624 0.595981 amb 0 0 0 emis 0 0 0 spec 1 1 1 shi 64 trans 0.5
+MATERIAL "Nonevisse.png" rgb 0.8 0.8 0.8 amb 0.5 0.5 0.5 emis 0 0 0 spec 1 1 1 shi 32 trans 0
+MATERIAL "transparent.001" rgb 0.547091 0.565624 0.595981 amb 0 0 0 emis 0 0 0 spec 1 1 1 shi 64 trans 0.7
 OBJECT world
 kids 11
 OBJECT poly
 name "Face"
 data 4
 Face
-texture "colors.rgb"
+texture "colors.png"
 texrep 1 1
 crease 30.000000
 numvert 17
@@ -135,7 +135,7 @@ OBJECT poly
 name "Fond"
 data 4
 Fond
-texture "colors.rgb"
+texture "colors.png"
 texrep 1 1
 crease 30.000000
 numvert 193
@@ -1346,7 +1346,7 @@ OBJECT poly
 name "HourHand"
 data 8
 Mesh.005
-texture "colors.rgb"
+texture "colors.png"
 texrep 1 1
 crease 30.000000
 numvert 7
@@ -1383,7 +1383,7 @@ OBJECT poly
 name "MinuteHand"
 data 4
 Mesh
-texture "colors.rgb"
+texture "colors.png"
 texrep 1 1
 crease 30.000000
 numvert 7
@@ -1420,7 +1420,7 @@ OBJECT poly
 name "SecondHand"
 data 8
 Mesh.006
-texture "colors.rgb"
+texture "colors.png"
 texrep 1 1
 crease 30.000000
 numvert 7
@@ -1457,7 +1457,7 @@ OBJECT poly
 name "bezelinside"
 data 8
 Mesh.001
-texture "colors.rgb"
+texture "colors.png"
 texrep 1 1
 crease 30.000000
 numvert 224
@@ -2683,7 +2683,7 @@ OBJECT poly
 name "visse1"
 data 6
 visse1
-texture "colors.rgb"
+texture "colors.png"
 texrep 1 1
 crease 30.000000
 numvert 184
@@ -4869,7 +4869,7 @@ OBJECT poly
 name "visse2"
 data 6
 visse2
-texture "colors.rgb"
+texture "colors.png"
 texrep 1 1
 crease 30.000000
 numvert 184
@@ -7055,7 +7055,7 @@ OBJECT poly
 name "visse3"
 data 6
 visse3
-texture "colors.rgb"
+texture "colors.png"
 texrep 1 1
 crease 30.000000
 numvert 184
@@ -9241,7 +9241,7 @@ OBJECT poly
 name "visse4"
 data 6
 visse4
-texture "colors.rgb"
+texture "colors.png"
 texrep 1 1
 crease 30.000000
 numvert 184
@@ -11427,7 +11427,7 @@ OBJECT poly
 name "vitre"
 data 5
 vitre
-texture "glass.rgb"
+texture "glass.png"
 texrep 1 1
 crease 30.000000
 numvert 290
