--- a/Models/shadow.ac
+++ b/Models/shadow.ac
@@ -1,26 +1,26 @@
 AC3Db
-MATERIAL "DefaultWhite" rgb 1 1 1  amb 1 1 1  emis 0 0 0  spec 0.5 0.5 0.5  shi 64  trans 0
-MATERIAL "DefaultWhite" rgb 1 1 1 amb 1 1 1 emis 0 0 0 spec 0.5 0.5 0.5 shi 64 trans 0
+MATERIAL "DefaultWhite" rgb 1 1 1 amb 1 1 1 emis 0 0 0 spec 0.5 0.5 0.5 shi 50 trans 0
 OBJECT world
 kids 1
 OBJECT poly
 name "shadow"
+loc 0 0 -0
 data 6
 shadow
 texture "shadow.png"
 texrep 1 1
-crease 30.000000
+crease 30.000001
 numvert 4
-6.046504 -1.505553 -5.271637
-6.046504 -1.505553 5.271637
--6.433107 -1.505553 5.271636
--6.433104 -1.505553 -5.271639
+6.239805 0 -5.271636
+6.239805 0 5.271638
+-6.239806 0 5.271637
+-6.239803 0 -5.271638
 numsurf 1
-SURF 0x00
-mat 1
+SURF 0x10
+mat 0
 refs 4
-0 1.0 0.999999642372
-3 3.05674348056e-07 1.0
-2 0.0 1.80906610581e-07
-1 0.999999880791 0.0
+0 1 0.999999642372
+3 0.000000305674 1
+2 0 0.000000180907
+1 0.999999880791 0
 kids 0
